# app/javascript/survey/api/endPoints.js
@@ -7,7 +7,12 @@ const getSurvey = ({ uuid }) => ({
   url: `/public/api/v1/csat_survey/${uuid}`,
 });
 
+const getCsatMessage = ({ uuid }) => ({
+  url: `/public/api/v1/csat_message/${uuid}`,
+});
+
 export default {
   getSurvey,
   updateSurvey,
+  getCsatMessage,
 };
